--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -1,3 +1,7 @@
 $color-space-ink: #131BA3;
 $color-lighter-dust: #E8E9FC;
+$color-star-field: #FFB550;
+$color-star-field-dark: #FFB100;
 $color-error: indianred;
+$color-white: #FFFFFF;
+$color-ink: #1A1A1A
