sign up basic info screen

--- a/src/components/SignUpLanding/index.module.scss
+++ b/src/components/SignUpLanding/index.module.scss
@@ -9,7 +9,7 @@
 
   &__footer {
     margin-top: 16px;
-    text-align: right;
+    text-align: center;
     font: normal normal normal 14px/19px Avenir Next;
     letter-spacing: 0;
     color: $color-ink;
