--- a/src/components/SignUpBasicInfo/components/BasicInfoForm.module.scss
+++ b/src/components/SignUpBasicInfo/components/BasicInfoForm.module.scss
@@ -2,7 +2,7 @@
   max-width: 350px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
 
   button {
     margin-top: 16px;
