--- a/src/components/common/ScreenLayout/index.module.scss
+++ b/src/components/common/ScreenLayout/index.module.scss
@@ -10,11 +10,33 @@
   padding-top: 60px;
   padding-bottom: 75px;
 
+  &__content {
+    width: 316px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+  }
+
   &__header-wrapper {
     font: normal normal 500 24px/33px Avenir Next;
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 120px;
+    padding-bottom: 48px;
+  }
+
+  &__header {
+    text-align: center;
+    font: normal normal bold 24px/33px Avenir Next;
+    letter-spacing: 0;
+    color: $color-ink;
+    padding: 10px;
+  }
+
+  &__sub-header {
+    text-align: center;
+    font: normal normal normal 14px/22px Avenir Next;
+    letter-spacing: 0;
+    color: #1A1A1A;
   }
 }
