--- a/src/components/forms/Checkbox/index.module.scss
+++ b/src/components/forms/Checkbox/index.module.scss
@@ -8,6 +8,7 @@
   label {
     display: flex;
     flex-direction: row;
+    align-items: center;
     text-align: left;
     font: normal normal normal 14px/20px Avenir Next;
     letter-spacing: 0;
