--- a/src/components/common/ScreenLayout/index.module.scss
+++ b/src/components/common/ScreenLayout/index.module.scss
@@ -1,8 +1,10 @@
+@import 'styles/shared';
+
 .root {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 460px;
+  width: 460px;
   min-height: 300px;
   background: #FFFFFF 0 0 no-repeat padding-box;
   border: 1px solid #E8E9FC;
