--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -1,5 +1,16 @@
 @import './fonts/font-faces';
+@import './shared';
 
 body {
   background: #F2F3FA 0 0 no-repeat padding-box;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
