added .eslint + airbnb & linted

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,9 +4,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  background: transparent url('./assets/main-background.svg') no-repeat center;
+  background: transparent url("./assets/main-background.svg") no-repeat center;
 }
 
 .main {
-
 }
