--- a/src/components/forms/ButtonLinkedIn/index.module.scss
+++ b/src/components/forms/ButtonLinkedIn/index.module.scss
@@ -1,7 +1,7 @@
 .root {
-  background: #0073B1 0 0 no-repeat padding-box;
+  background: #0073b1 0 0 no-repeat padding-box;
 
   &:hover {
-    background: #0073A1 0 0 no-repeat padding-box;
+    background: #0073a1 0 0 no-repeat padding-box;
   }
 }
