--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -1,7 +1,7 @@
-$color-space-ink: #131BA3;
-$color-lighter-dust: #E8E9FC;
-$color-star-field: #FFB550;
-$color-star-field-dark: #FFB100;
+$color-space-ink: #131ba3;
+$color-lighter-dust: #e8e9fc;
+$color-star-field: #ffb550;
+$color-star-field-dark: #ffb100;
 $color-error: indianred;
-$color-white: #FFFFFF;
-$color-ink: #1A1A1A
+$color-white: #ffffff;
+$color-ink: #1a1a1a;
